fix text select on mobile drag

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,10 +12,12 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
 }
 
 * {
   box-sizing: border-box;
+  user-select: none;
 }
 
 :root {
